--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <title>Kamdem | My Portfolio 🔥 </title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg-dark">
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <h1><a class="navbar-brand" href="index.html"><i class="fa-solid fa-ankh"></i> <strong>Kamdem Brice.</strong></a></h1>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
+                        <h1><a class="navbar-brand text-white" href="index.html"><i class="fa-solid fa-ankh"></i> <strong>Kamdem Brice.</strong></a></h1>
+                        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="font-size:10px;">
+                            <span class="navbar-toggler-icon text-white" style="font-size: 15px;"></span>
                         </button>
                         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#home"><i class="fa-solid fa-house"></i> Home</a>
+                                    <a class="nav-link active text-white" aria-current="page" href="#home"><i class="fa-solid fa-house"></i> Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#aboutme"><i class="fa-solid fa-user"></i> About me</a>
@@ -89,7 +89,7 @@
                     <p class="description" data-aos="fade-up" data-aos-duration="3000">
                         Je m’appelle Kamdem Brice 🔥, passionné par le développement web et les technologies modernes.
                         Actuellement, je me spécialise dans le backend avec Django, tout en maîtrisant HTML, CSS, Bootstrap et PostgreSQL.
-                        Mon parcours universitaire en histoire m’a appris la rigueur 😎, l’esprit critique et la curiosité intellectuelle.
+                        Mon parcours m’a appris la rigueur 😎, l’esprit critique et la curiosité intellectuelle.
                         Aujourd’hui, je combine ces compétences avec ma créativité pour concevoir des applications web modernes et performantes.
                         J’aime relever des défis techniques, apprendre de nouvelles technologies et améliorer en continu mes projets.
                         Je consacre beaucoup de temps à expérimenter, créer et perfectionner mes compétences.
@@ -136,7 +136,7 @@
                 </div> 
             </div>
         </div>
-        <div class="row mb-3 mt-5 bg-light pb-5" id="skills" data-aos="fade-left" data-aos-duration="3000">
+        <div class="row mb-3 mt-5 bg-light pb-5" id="skills" data-aos="fade-up" data-aos-duration="2000">
             <div class="row text-center mt-5" id="skills">
                 <div class="col-md-12">
                     <h1>SKILLS & TECHNOLOGIES 🎯</h1><br>
@@ -165,7 +165,7 @@
             <div class="row text-center mt-5" data-aos="fade-up" data-aos-duration="2500">
                 <h3>< Mes services /></h3>
                 <p>Ce que je peux faire pour vous.</p>
-                <div class="col-md-4 mb-1 mt-5">
+                <div class="col-md-4 mt-5">
                     <div class="card p-3">
                         <i class="fa-solid fa-server fa-3x  mb-3"></i>
                         <div class="card-body">
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-1 mt-5">
+                <div class="col-md-4 mt-5">
                     <div class="card p-3">
                         <i class="fa-solid fa-code fa-3x text-success mb-3"></i>
                         <div class="card-body">
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-1 mt-5">
+                <div class="col-md-4 mt-5">
                     <div class="card p-3">
                         <i class="fa-solid fa-database fa-3x text-warning mb-3"></i>
                         <div class="card-body">
@@ -217,7 +217,6 @@
                             JavaScript, and Bootstrap, featuring user authentication and 
                             dynamic content management.</p>
                         </div>
-                        <div class="btn-project"><button id="btn1">Live demo <i class="fas fa-arrow-right"></i></button><button id="btn2">Code</button></div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 text-center mb-2" data-aos="fade-up" data-aos-duration="3000">
@@ -229,7 +228,6 @@
                             JavaScript, and Bootstrap, featuring user authentication and 
                             dynamic content management.</p>
                         </div>
-                        <div class="btn-project"><button id="btn1">Live demo <i class="fas fa-arrow-right"></i></button><button id="btn2">Code</button></div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 text-center" data-aos="fade-right" data-aos-duration="3000">
@@ -241,7 +239,6 @@
                             JavaScript, and Bootstrap, featuring user authentication and 
                             dynamic content management.</p>
                         </div>
-                        <div class="btn-project"><button id="btn1">Live demo <i class="fas fa-arrow-right"></i></button><button id="btn2">Code</button></div>
                     </div>
                 </div>
             </div>
@@ -348,7 +345,7 @@
                 <a href=""><i class="fa-2x fab fa-tiktok"></i></a>
                 <a href=""><i class="fa-2x fab fa-instagram"></i></a>
                 <a href=""><i class="fa-2x fab fa-github"></i></a>
-                <a href=""><i class="fa-2x fab fa-gitlab"></i></a>
+                <a href=""><i class="fa-2x fab fa-facebook-messenger"></i></a>
                 <a href=""><i class="fa-2x fab fa-google"></i></a>
             </div>
             <hr>
