--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
@@ -17,7 +17,7 @@
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <h1><a class="navbar-brand text-white" href="index.html"><i class="fa-solid fa-ankh"></i> <strong>Kamdem Brice.</strong></a></h1>
+                        <h1><a class="navbar-brand text-white" href="index.html"><i class="fa-solid fa-ankh"></i> <strong>Kamdem Brice</strong></a></h1>
                         <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="font-size:10px;">
                             <span class="navbar-toggler-icon text-white" style="font-size: 15px;"></span>
@@ -57,8 +57,8 @@
                     📩 Découvre mes projets et n’hésite pas à me contacter !
                 </h6> 
                 <div class="btn-homesection">
-                    <a href="#projects">View projects <i class="fa-solid fa-briefcase"></i></a> 
-                    <a href="#contact-section">Contact me now <i class="fa-solid fa-phone"></i></a>
+                    <a href="#projects">View projects</a> 
+                    <a href="#contact-section">Contact me now</a>
                 </div>
             </div>
             <div class="col-md-2"></div>
@@ -136,7 +136,7 @@
                 </div> 
             </div>
         </div>
-        <div class="row mb-3 mt-5 bg-light pb-5" id="skills" data-aos="fade-up" data-aos-duration="2000">
+        <div class="row mb-3 mt-5 bg-light pb-5" id="skills-section" data-aos="fade-up" data-aos-duration="2000">
             <div class="row text-center mt-5" id="skills">
                 <div class="col-md-12">
                     <h1>SKILLS & TECHNOLOGIES 🎯</h1><br>
@@ -146,20 +146,20 @@
                     <h3>< All my tools /></h3>
                 </div>
             </div>
-            <div class="row text-center mt-4" data-aos="fade-up" data-aos-duration="3000">
+            <div class="row text-center mt-4" id="technos" data-aos="fade-up" data-aos-duration="3000">
                 <div class="col-md-12">
-                    <img src="images/html2.png">
-                    <img src="images/css.png">
-                    <img src="images/js.png">
-                    <img src="images/django.png">
-                    <img src="images/git.png">
-                    <img src="images/github.png">
-                    <img src="images/vscode.png">
-                    <img src="images/figma.jfif">
-                    <img src="images/python.png">
-                    <img src="images/react.png">
-                    <img src="images/postgresql.png">
-                    <img src="images/postman.png">
+                    <img src="images/html2.png" class="img-fluid">
+                    <img src="images/css.png" class="img-fluid">
+                    <img src="images/js.png" class="img-fluid">
+                    <img src="images/django.png" class="img-fluid">
+                    <img src="images/git.png" class="img-fluid">
+                    <img src="images/github.png" class="img-fluid">
+                    <img src="images/vscode.png" class="img-fluid">
+                    <img src="images/figma.jfif" class="img-fluid">
+                    <img src="images/python.png" class="img-fluid">
+                    <img src="images/react.png" class="img-fluid">
+                    <img src="images/postgresql.png" class="img-fluid">
+                    <img src="images/postman.png" class="img-fluid">
                 </div>
             </div>
             <div class="row text-center mt-5" data-aos="fade-up" data-aos-duration="2500">
@@ -232,7 +232,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6 text-center" data-aos="fade-right" data-aos-duration="3000">
                     <div class="card p-3 h-100">
-                        <div class="card-img-top"><img src="images/figma.jfif" class="img-fluid"></div>
+                        <div class="card-img-top"><img src="images/projet3.JPG" class="img-fluid"></div>
                         <div class="card-title mt-4"><h5>Drawing arts presentation</h5></div>
                         <div class="card-text">
                             <p>A robust web app built with Django, 
@@ -369,7 +369,7 @@
         </div>
     </div>
     <!-- Bouton retour en haut -->
-    <button onclick="topFunction()" id="btnTop" title="Retour en haut" data-aos="fade-up" data-aos-duration="3000"><i class="fa-solid fa-arrow-up"></i></button>
+    <button onclick="topFunction()" id="btnTop" data-aos="fade-up" data-aos-duration="3000"><i class="fa-solid fa-arrow-up"></i></button>
     <script>
         AOS.init();
     </script>
