--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Kamdem | My Portfolio 🔥 </title>
+    <link rel="shortcut icon" href="images/profile3.jpg" type="image/x-icon">
 </head>
 <body>
     <div class="container-fluid bg-dark">
